--- a/DataAccesLayer/DataAccesLayer.csproj
+++ b/DataAccesLayer/DataAccesLayer.csproj
@@ -78,6 +78,14 @@
     <Compile Include="Migrations\202210121851385_mig_writertitle_add.designer.cs">
       <DependentUpon>202210121851385_mig_writertitle_add.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202210141217446_mig_imagesizechange.cs" />
+    <Compile Include="Migrations\202210141217446_mig_imagesizechange.designer.cs">
+      <DependentUpon>202210141217446_mig_imagesizechange.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202210141816226_mig_writer_addstatus.cs" />
+    <Compile Include="Migrations\202210141816226_mig_writer_addstatus.designer.cs">
+      <DependentUpon>202210141816226_mig_writer_addstatus.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -100,6 +108,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202210121851385_mig_writertitle_add.resx">
       <DependentUpon>202210121851385_mig_writertitle_add.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202210141217446_mig_imagesizechange.resx">
+      <DependentUpon>202210141217446_mig_imagesizechange.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202210141816226_mig_writer_addstatus.resx">
+      <DependentUpon>202210141816226_mig_writer_addstatus.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
